B&L QA/objects/Opportunity_Snapshot__c.object
<CustomObject>
    <description>USSUR Created for capturing analytic snapshot data for use in reporting</description>
    <fields>
        <fullName>Account_SETID__c</fullName>
        <label>Account SETID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>USSUR Account Name</description>
        <label>Acct Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Snapshots</relationshipLabel>
        <relationshipName>Opportunity_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anterior_Disp_Monthly_Units__c</fullName>
        <description>USSUR Anterior Disp Monthy Units</description>
        <label>Anterior Disp Monthly Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anterior_Disp_Price_each__c</fullName>
        <description>USSUR Anterior Disp Price Each</description>
        <label>Anterior Disp Price (each)</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_Price_of_Handpieces__c</fullName>
        <label>Avg Price of Handpieces</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>USSUR Close Date</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <description>USSUR Contract Term</description>
        <label>Contract Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>USSUR Created Date</description>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eval_Date__c</fullName>
        <label>Eval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GPO_Buying_Affiliation__c</fullName>
        <label>GPO Buying Affiliation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Revenue__c</fullName>
        <description>USSUR Machine Revenue</description>
        <label>Machine Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>USSUR Opp name - lookup for linking</description>
        <label>Opp Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Snapshots</relationshipLabel>
        <relationshipName>Opportunity_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>USSUR Opportunity Owner</description>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Posterior_Disp_Monthly_Units__c</fullName>
        <description>USSUR Posterior Disp Monthly</description>
        <label>Posterior Disp Monthly Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posterior_Disp_Price_each__c</fullName>
        <description>USSUR Posterior Disp Price each</description>
        <label>Posterior Disp Price (each)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Reason_Lost__c</fullName>
        <label>Primary Reason Lost</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Reason_Won__c</fullName>
        <label>Primary Reason Won</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <description>USSUR Probability</description>
        <label>Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Program_Opp_Type__c</fullName>
        <description>USSUR Program Opp Type</description>
        <label>Program/Opp Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Annual_Revenue__c</fullName>
        <description>base field on Oppt is a formula field - no edit</description>
        <label>Projected Annual Revenue</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qualified_Lead_from_STM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualified Lead from STM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Lost_comments__c</fullName>
        <label>Reason Lost comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Reason_Lost__c</fullName>
        <label>Secondary Reason Lost</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Reason_Won__c</fullName>
        <label>Secondary Reason Won</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_ID__c</fullName>
        <description>USSUR Ship To ID</description>
        <label>Ship To ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <description>USSUR Date of Snapshot</description>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>USSUR Opportunity Stage</description>
        <label>Stage</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stellaris_PC_Plan_Op_Lease_Units__c</fullName>
        <label>Stellaris PC Plan - Op Lease Units</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stellaris_PC_Plan_Revenue__c</fullName>
        <label>Stellaris PC Plan - Revenue</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stellaris_PC_Plan_Sales_Units__c</fullName>
        <label>Stellaris PC Plan - Sales Units</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stellaris_PC_Price_each__c</fullName>
        <description>USSUR Stellaris PC Price each</description>
        <label>Stellaris PC Price (each)</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stellaris_PC_Revenue_Fcst_Unwtd__c</fullName>
        <label>Stellaris PC Revenue Fcst - Unweighted</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stellaris_PC_Revenue_Fcst_Wtd__c</fullName>
        <label>Stellaris PC Revenue Fcst - Weighted</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stellaris_PC_Units_Fcst_Wtd__c</fullName>
        <label>Stellaris PC Units Fcst - Weighted</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stellaris_PC_Units_Op_Lease__c</fullName>
        <description>USSUR Stellaris PC Units Op Lease</description>
        <label>Stellaris PC Units - Op Lease</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stellaris_PC_Units__c</fullName>
        <description>USSUR Stellaris PC Units</description>
        <label>Stellaris PC Units</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stellaris_Plan_Op_Lease_Units__c</fullName>
        <label>Stellaris Plan - Op Lease Units</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stellaris_Plan_Revenue__c</fullName>
        <label>Stellaris Plan - Revenue</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stellaris_Plan_Sales_Units__c</fullName>
        <label>Stellaris Plan - Sales Units</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stellaris_Price_each__c</fullName>
        <description>USSUR Stellaris Price each</description>
        <label>Stellaris Price (each)</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stellaris_Revenue_Fcst_Unwtd__c</fullName>
        <label>Stellaris Revenue Fcst Unweighted</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stellaris_Revenue_Fcst_Wtd__c</fullName>
        <label>Stellaris Revenue Fcst - Weighted</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stellaris_Units_Fcst_Wtd__c</fullName>
        <label>Stellaris Units Fcst-Weighted</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stellaris_Units_Op_Lease__c</fullName>
        <description>USSUR Stellaris Units</description>
        <label>Stellaris Units - Op Lease</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stellaris_Units__c</fullName>
        <description>USSUR Stellaris Units</description>
        <label>Stellaris Units</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tertiary_Reason_Lost__c</fullName>
        <label>Tertiary Reason Lost</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tertiary_Reason_Won__c</fullName>
        <label>Tertiary Reason Won</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Financing__c</fullName>
        <description>USSUR Type of Financing</description>
        <label>Type of Financing</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Additional_Handpieces__c</fullName>
        <label># of Additional Handpieces</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Scopes__c</fullName>
        <label># of Scopes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Acct_Name__c</columns>
        <columns>Opp_Name__c</columns>
        <columns>Created_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Stellaris_PC_Price_each__c</columns>
        <columns>Stellaris_PC_Units__c</columns>
        <columns>Stellaris_PC_Units_Op_Lease__c</columns>
        <columns>Stellaris_Price_each__c</columns>
        <columns>Stellaris_Units__c</columns>
        <columns>Stellaris_Units_Op_Lease__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Opportunity Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Snapshots</pluralLabel>
    <recordTypes>
        <fullName>USSUR_SES</fullName>
        <active>true</active>
        <description>USSUR Equipment</description>
        <label>USSUR SES</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>